Move some longer running tests from the test phase to the verification phase