@@ -137,12 +137,6 @@
             <artifactId>testcontainers</artifactId>
             <version>2.0.3</version>
             <scope>test</scope>
-	    <!--exclusions>
-                <exclusion>
-		    <groupId>org.apache.commons</groupId>
-                    <artifactId>commons-compress</artifactId>
-                </exclusion>
-	    </exclusions-->
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -244,18 +238,6 @@
                             --add-opens java.base/java.lang=ALL-UNNAMED
                         </argLine>
                     </configuration>
-                    <!--dependencies>
-                        <dependency>
-                            <groupId>org.junit.jupiter</groupId>
-                            <artifactId>junit-jupiter-api</artifactId>
-                            <version>5.13.1</version>
-                        </dependency>
-                        <dependency>
-                            <groupId>org.junit.vintage</groupId>
-                            <artifactId>junit-vintage-engine</artifactId>
-                            <version>5.13.1</version>
-                        </dependency>
-                    </dependencies-->
                 </plugin>
 		    <plugin>
 			<groupId>org.owasp</groupId>
@@ -391,6 +373,29 @@
                         <include>**/IT*.java</include>
                     </includes>
                     <skipTests>${skipIntegrationTests}</skipTests>
+                    <argLine>
+                        -XX:+EnableDynamicAgentLoading
+                        <!-- experimental workaround for Snowflake JDBC issue,
+                             see https://community.snowflake.com/s/article/JDBC-Driver-Compatibility-Issue-With-JDK-16-and-Later -->
+                        --add-opens java.base/java.nio=ALL-UNNAMED
+                        <!-- suppress exceptions from cacio-tta, see https://github.com/CaciocavalloSilano/caciocavallo -->
+                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+                        --add-exports java.base/java.lang.reflect=ALL-UNNAMED
+                        --add-exports=java.desktop/java.awt=ALL-UNNAMED
+                        --add-exports=java.desktop/java.awt.peer=ALL-UNNAMED
+                        --add-exports=java.desktop/sun.awt.image=ALL-UNNAMED
+                        --add-exports=java.desktop/sun.java2d=ALL-UNNAMED
+                        --add-exports=java.desktop/java.awt.dnd.peer=ALL-UNNAMED
+                        --add-exports=java.desktop/sun.awt=ALL-UNNAMED
+                        --add-exports=java.desktop/sun.awt.event=ALL-UNNAMED
+                        --add-exports=java.desktop/sun.awt.datatransfer=ALL-UNNAMED
+                        --add-exports=java.base/sun.security.action=ALL-UNNAMED
+                        --add-opens=java.base/java.util=ALL-UNNAMED
+                        --add-opens=java.desktop/java.awt=ALL-UNNAMED
+                        --add-opens=java.desktop/sun.java2d=ALL-UNNAMED
+                        --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                    </argLine>
                 </configuration>
                 <executions>
                     <execution>
